# protobuf-ethics

./: .gitignore  README.md  build.rs  cargo.toml  main.py  pyproject.toml
proto/: ethics.proto
scripts/: calculate_raw_text_length_stats.py  export_to_jsonl.py  get_raw_training_data.py  prune_data_by_length.py
src/: main.rs
