[project]
name = "protobuf-ethics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "datasets>=4.3.0",
    "grpcio-tools>=1.76.0",
    "protobuf>=6.33.0",
    "tokenizers>=0.22.1",
    "transformers>=4.57.1",
    "zstandard>=0.25.0",
]
